# EMURGO-Final-Project

./: .gitignore  .gitpod.yml  README.md  emurgo-project.cabal
app/: Main.hs
assets/: logo.txt
src/: Actions.hs  Lib.hs  Types.hs
